# plate-finder

./: .gitignore  DEVLOG.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-push.yml
.pnpm-store/v10/index/00/: e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6fa-glob-parent@5.1.2.json
.pnpm-store/v10/index/01/: 2b23fada440ec12216bd5aad6ae537a57799d7e344c66de8bb4afd5a7f92b7-@types+babel__generator@7.6.8.json  89dbd67432638f6d7be551015826cdf7208d84bdd666393f44ca50308b10cf-@types+estree@1.0.6.json
.pnpm-store/v10/index/02/: 3382df37e7c5de92e048b2de3c24b493dc96a8451cdc9df0be86c9c7fd5943-@typescript-eslint+visitor-keys@8.26.1.json
.pnpm-store/v10/index/04/: 63b92edac60bbbf19eab9c01efeb9af29d26595f19a616772001bf23285d09-esbuild@0.25.1.json  b2374e5d535b73ef97bd25df2ab763ae22f9ac29c17aac181616924a8cb676-which@2.0.2.json  ddb607979a30c23d50cb63ac677983978260fa423c3532d052576d8b1a4f9c-word-wrap@1.2.5.json
.pnpm-store/v10/index/05/: 1ed5bc30951cefaadb10445ac9314ba0c9135a919dbec3c7352ba206fbd425-semver@6.3.1.json  d6e8cbe97bb40dce196e858f21475a43f92ee0728f54e4df72e3caad1ac72c-json-stable-stringify-without-jsonify@1.0.1.json
api/: Dockerfile  pyproject.toml
api/src/: addresses.csv  main.py
src/: main.py
src/templates/: index.html
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.css  App.tsx  index.css  types.ts
web/src/components/: AddressMap.tsx  PlateImage.tsx  VehicleImage.tsx
(+175 files in other folders)
